add expected result to test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           file: 'file://./samples/direct.pac'
           url: 'https://www.google.com'
+          result: 'DIRECT'
