--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-action",
+  "name": "test-pac-file-action",
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
@@ -25,14 +25,14 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.9.0",
-    "@arcath/utils": "^3.2.0",
+    "@actions/core": "^1.10.1",
+    "@arcath/utils": "^3.14.1",
     "pac-file-tester": "^2.1.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.18.0",
-    "jest": "^28.1.1",
-    "prettier": "^2.7.1"
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5"
   }
 }
